# ml-blueprint

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: config.yaml  hotel_config.yaml
notebooks/: one_stop_notebook.ipynb
scripts/: modular_pipeline.py  one_stop_script.py  simple_grid_search.py
src/ml_blueprint/: __init__.py  config.py  data.py  model.py
